--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --hue-color: 230; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    --hue-color: 240; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -834,10 +834,6 @@ transition: .3s;
   justify-content: center;
 }
 
-.test {
-  background: linear-gradient(to left, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
-
-}
 
 /*==================== TESTIMONIAL ====================*/
 .testimonial__data,
@@ -926,6 +922,21 @@ transition: .3s;
   border: none;
   outline: none;
   padding: .25rem .5rem .5rem 0;
+}
+
+.white {
+  color: #fff;
+}
+
+.contact__email {
+  display: inline-block;
+  font-size: 1.25rem;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 1rem;
+  border-radius: .5rem;
+  border: none;
+  font-weight: var(--font-medium);
 }
 
 
@@ -1097,7 +1108,7 @@ transition: .3s;
 }
 
 /* For medium devices */
-@media screen and (max-width: 568px) {
+@media screen and (min-width: 568px) {
   .home__content {
     grid-template-columns: max-content 1fr 1fr;
   }
