updated the portfolio content

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -535,26 +535,42 @@ img {
   width: 70%;
 }
 
-.skills__firebase {
-  width: 90%;
+.skills__mysql {
+  width: 80%;
 }
 
-.skills__python {
-  width: 55%;
+.skills__postgresql {
+  width: 65%;
 }
 
 
 
-.skills__figma {
-  width: 90%;
+.skills__vscode {
+  width: 95%;
 }
 
-.skills__sketch {
-  width: 85%;
+.skills__docker {
+  width: 80%;
 }
 
 .skills__photoshop {
+  width: 75%;
+}
+
+.skills__github {
+  width: 95%;
+}
+
+.skills__phpmyadmin {
   width: 85%;
+}
+
+.skills__mamp {
+  width: 95%;
+}
+
+.skills__asana {
+  width: 95%;
 }
 
 .skills__close .skills__list {
